--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
+    "lucide-react": "^0.462.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -23,9 +24,13 @@
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^8.2.0",
     "eslint": "^8.57.1",
     "nodemon": "^3.0.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
