--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "lucide-react": "^0.462.0",
+    "puppeteer": "^24.22.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@types/react": "^19.1.12",
