--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "build": "tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start": "node server.js",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@google/genai": "^1.17.0",
